--- a/app/globals.css
+++ b/app/globals.css
@@ -30,6 +30,7 @@
   --chart-4: oklch(0.7879 0.1652 163.5379);
   --chart-5: oklch(0.6673 0.1278 168.4961);
   --sidebar: oklch(0.9851 0 0);
+  --lightGrey: oklch(0.9702 0 0);
   --sidebar-foreground: oklch(0.2167 0.0015 197.0424);
   --sidebar-primary: oklch(0.2167 0.0015 197.0424);
   --sidebar-primary-foreground: oklch(0.9851 0 0);
@@ -51,6 +52,7 @@
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   --tracking-normal: 0em;
   --spacing: 0.25rem;
+  
 }
 
 .dark {
@@ -160,5 +162,11 @@
   }
   body {
     @apply bg-background text-foreground;
+    overscroll-behavior-y: none; /* Prevents bounce */
+    scroll-behavior: smooth;
   }
+ header {
+  will-change: transform;
+  backface-visibility: hidden;
+}
 }
