--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,6 @@
   --chart-4: oklch(0.7879 0.1652 163.5379);
   --chart-5: oklch(0.6673 0.1278 168.4961);
   --sidebar: oklch(0.9851 0 0);
-  --lightGrey: oklch(0.9702 0 0);
   --sidebar-foreground: oklch(0.2167 0.0015 197.0424);
   --sidebar-primary: oklch(0.2167 0.0015 197.0424);
   --sidebar-primary-foreground: oklch(0.9851 0 0);
@@ -38,7 +37,7 @@
   --sidebar-accent-foreground: oklch(0.2167 0.0015 197.0424);
   --sidebar-border: oklch(0.9219 0 0);
   --sidebar-ring: oklch(0.7090 0 0);
-  --font-sans: Poppins, ui-sans-serif, sans-serif, system-ui;
+  --font-sans: Public Sans, ui-sans-serif, sans-serif, system-ui;
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --radius: 0.625rem;
@@ -52,7 +51,6 @@
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   --tracking-normal: 0em;
   --spacing: 0.25rem;
-  
 }
 
 .dark {
@@ -88,7 +86,7 @@
   --sidebar-accent-foreground: oklch(0.9851 0 0);
   --sidebar-border: oklch(0.2768 0 0);
   --sidebar-ring: oklch(0.4386 0 0);
-  --font-sans: Poppins, ui-sans-serif, sans-serif, system-ui;
+  --font-sans: Public Sans, ui-sans-serif, sans-serif, system-ui;
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --radius: 0.625rem;
